plugins {
    id 'java-library'
    id 'maven-publish'
    id 'net.neoforged.gradle.userdev' version '7.1.38'
}

tasks.named('wrapper', Wrapper).configure {
    // Define wrapper values here so as to not have to always do so when updating gradlew.properties.
    // Switching this to Wrapper.DistributionType.ALL will download the full gradle sources that comes with
    // documentation attached on cursor hover of gradle classes and methods. However, this comes with increased
    // file size for Gradle. If you do switch this to ALL, run the Gradle wrapper task twice afterwards.
    // (Verify by checking gradle/wrapper/gradle-wrapper.properties to see if distributionUrl now points to `-all`)
    distributionType = Wrapper.DistributionType.BIN
}

version = mod_version
group = mod_group_id

sourceSets.main.resources {
    // Include resources generated by data generators.
    srcDir('src/generated/resources')

    // Exclude common development only resources from finalized outputs
    exclude("**/*.bbmodel") // BlockBench project files
    exclude("src/generated/**/.cache") // datagen cache files
}

repositories {
    maven { url = "https://maven.createmod.net" } // Create, Ponder, Flywheel
    maven { url = "https://maven.ithundxr.dev/snapshots" } // Registrate
    maven { url = "https://maven.blamejared.com"} // JEI
}

base {
    archivesName = mod_id
}

// Mojang ships Java 21 to end users in 1.21.1, so mods should target Java 21.
java.toolchain.languageVersion = JavaLanguageVersion.of(21) //DO NOT CHANGE THIS

//minecraft.accessTransformers.file rootProject.file('src/main/resources/META-INF/accesstransformer.cfg')
//minecraft.accessTransformers.entry public net.minecraft.client.Minecraft textureManager # textureManager

// Default run configurations.
// These can be tweaked, removed, or duplicated as needed.
runs {
    // applies to all the run configs below
    configureEach {
        // Recommended logging data for a userdev environment
        // The markers can be added/remove as needed separated by commas.
        // "SCAN": For mods scan.
        // "REGISTRIES": For firing of registry events.
        // "REGISTRYDUMP": For getting the contents of all registries.
        systemProperty 'forge.logging.markers', 'REGISTRIES'

        // Recommended logging level for the console
        // You can set various levels here.
        // Please read: https://stackoverflow.com/questions/2031163/when-to-use-the-different-log-levels
        systemProperty 'forge.logging.console.level', 'debug'

        modSource project.sourceSets.main
    }

    client {
        // Comma-separated list of namespaces to load gametests from. Empty = all namespaces.
        systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
    }

    server {
        systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        argument '--nogui'
    }

    // This run config launches GameTestServer and runs all registered gametests, then exits.
    // By default, the server will crash when no gametests are provided.
    // The gametest system is also enabled by default for other run configs under the /test command.
    gameTestServer {
        systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
    }

    data {
        // example of overriding the workingDirectory set in configureEach above, uncomment if you want to use it
        // workingDirectory project.file('run-data')

        // Specify the modid for data generation, where to output the resulting resource, and where to look for existing resources.
        arguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
    }
}

// Sets up a dependency configuration called 'localRuntime'.
// This configuration should be used instead of 'runtimeOnly' to declare
// a dependency that will be present for runtime testing but that is
// "optional", meaning it will not be pulled by dependents of this mod.
configurations {
    runtimeClasspath.extendsFrom localRuntime
}

dependencies {
    // JEI API (compile only)
    compileOnly "mezz.jei:jei-${minecraft_version}-common-api:${jei_version}"
    compileOnly "mezz.jei:jei-${minecraft_version}-neoforge-api:${jei_version}"
    // JEI runtime
    localRuntime "mezz.jei:jei-${minecraft_version}-neoforge:${jei_version}"
    // Create, Ponder, Flywheel, and Registrate dependencies
    implementation "net.neoforged:neoforge:${neo_version}"
    implementation("com.simibubi.create:create-${minecraft_version}:${create_version}:slim") { transitive = false }
    implementation("net.createmod.ponder:ponder-neoforge:${ponder_version}+mc${minecraft_version}")
    compileOnly("dev.engine-room.flywheel:flywheel-neoforge-api-${minecraft_version}:${flywheel_version}")
    localRuntime("dev.engine-room.flywheel:flywheel-neoforge-${minecraft_version}:${flywheel_version}")
    implementation("com.tterrag.registrate:Registrate:${registrate_version}")

    // For more info:
    // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
    // http://www.gradle.org/docs/current/userguide/dependency_management.html
}

// This block of code expands all declared replace properties in the specified resource targets.
// A missing property will result in an error. Properties are expanded using ${} Groovy notation.
// When "copyIdeResources" is enabled, this will also run before the game launches in IDE environments.
// See https://docs.gradle.org/current/dsl/org.gradle.language.jvm.tasks.ProcessResources.html
tasks.withType(ProcessResources).configureEach {
    var replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neo_version            : neo_version,
            loader_version_range   : loader_version_range,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
            create_version         : create_version,
            ponder_version         : ponder_version,
            flywheel_version       : flywheel_version,
            registrate_version     : registrate_version,
            jei_version            : jei_version
    ]
    inputs.properties replaceProperties

    filesMatching(['META-INF/neoforge.mods.toml']) {
        expand replaceProperties
    }
}

tasks.register("publishToModrinth") {
    group = "publishing"
    description = "Builds the mod and uploads it to Modrinth"

    def changelog = project.findProperty("changelog")
    if (changelog == null || changelog.trim().isEmpty()) {
        throw new GradleException("No changelog provided. Use -Pchangelog=\"your text\"")
    }
    // Run the build first so the JAR exists
    dependsOn("build")

    doLast {
        // Find the built JAR in build/libs
        def jarFile = file("build/libs").listFiles().find { it.name.endsWith(".jar") }
        if (!jarFile) throw new GradleException("No JAR found in build/libs")

        println "Uploading: ${jarFile.name}"

        // Read Modrinth API token from environment
        def token = System.getenv("MODRINTH_TOKEN")
        if (!token) throw new GradleException("Missing MODRINTH_TOKEN env variable")

        // Open Modrinth API connection
        def apiUrl = new URL("https://api.modrinth.com/v2/version")
        HttpURLConnection conn = (HttpURLConnection) apiUrl.openConnection()
        conn.setRequestMethod("POST")
        conn.setDoOutput(true)
        conn.setRequestProperty("Authorization", "Bearer " + token)

        // Multipart boundary required by Modrinth API
        def boundary = "----GradleBoundary" + System.currentTimeMillis()
        conn.setRequestProperty("Content-Type", "multipart/form-data; boundary=" + boundary)

        def output = conn.outputStream

        // JSON metadata (cannot contain comments!)
        def modVersion = project.findProperty("mod_version")
        def versionType = modVersion.contains("-")
                ? modVersion.substring(modVersion.lastIndexOf("-") + 1)
                : "release"
        def metadata = """
        {
          "project_id": "YOUR_PROJECT_ID",
          "version_number": "${mod_version}",
          "name": "${mod_name}-${mod_version}",
          "changelog": "${changelog.toString()}",
          "game_versions": ["1.21.1"],
          "version_type": "${versionType}",
          "loaders": ["neoforge"],
          "featured": true,
          "status": "listed",
          "file_parts": ["file"]
        }
        """.trim()

        // Write JSON part
        output.write(("--$boundary\r\n").bytes)
        output.write("Content-Disposition: form-data; name=\"data\"\r\n".bytes)
        output.write("Content-Type: application/json\r\n\r\n".bytes)
        output.write(metadata.bytes)
        output.write("\r\n".bytes)

        // Write file part
        output.write(("--$boundary\r\n").bytes)
        output.write("Content-Disposition: form-data; name=\"file\"; filename=\"${jarFile.name}\"\r\n".bytes)
        output.write("Content-Type: application/java-archive\r\n\r\n".bytes)
        Files.copy(jarFile.toPath(), output)
        output.write("\r\n".bytes)

        // End boundary
        output.write(("--$boundary--\r\n").bytes)
        output.flush()

        // Read response
        def responseCode = conn.responseCode
        def responseText = conn.inputStream.text

        println "Modrinth response ($responseCode):"
        println responseText

        if (responseCode !in 200..299) {
            throw new GradleException("Upload failed: $responseText")
        }
    }
}


tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
}

// IDEA no longer automatically downloads sources/javadoc jars for dependencies, so we need to explicitly enable the behavior.
idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}
